--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -5,6 +5,7 @@
 @import "./assets/styles/general.scss";
 @import "./assets/styles/no-auth-layout.scss";
 @import "./assets/styles/section-container.scss";
+@import "./assets/styles/resource-grid.scss";
 
 .box-shadow {
   -webkit-box-shadow: 0px 10px 26px -6px rgba(0, 0, 0, 0.2);
