minor change to profile photo

--- a/client/src/app/pages/profile/profile.component.scss
+++ b/client/src/app/pages/profile/profile.component.scss
@@ -38,7 +38,8 @@
 
             .image-container {
                 background-size: contain;
-                border: 3px solid transparent;
+                border: 3px solid white;
+                box-shadow: 0 8px 20px 0 rgba(145, 145, 145, 0.6);
                 border-radius: 50%;
                 cursor: pointer;
                 width: 75px;
