--- a/client/src/app/pages/profile/profile.component.scss
+++ b/client/src/app/pages/profile/profile.component.scss
@@ -1,12 +1,27 @@
 .section-container {
     .section {
         .profile-picture {
+            display: grid;
+            grid-template-columns: 90px 1fr 100px;
             border-radius: 50%;
-            display: flex;
-            flex-direction: row;
             margin-bottom: 20px;
             margin-top: 25px;
-            position: relative;
+
+            .image-container {
+                background-size: contain;
+                border: 3px solid white;
+                box-shadow: 0 8px 20px 0 rgba(145, 145, 145, 0.6);
+                border-radius: 50%;
+                cursor: pointer;
+                width: 75px;
+                height: 75px;
+                margin-right: 15px;
+                transition: border-color 0.2s ease-in-out;
+
+                &:hover {
+                    border-color: #2196F3;
+                }
+            }
 
             .text {
                 p {
@@ -27,29 +42,11 @@
 
             .toggle-profile-view {
                 display: none;
+                align-self: center;
+                justify-self: center;
                 color: rgba(0, 0, 0, .8);
-                position: absolute;
-                top: 50%;
-                transform: translateY(-50%);
-                right: 0;
                 width: 100px;
                 font-size: 12px;
-            }
-
-            .image-container {
-                background-size: contain;
-                border: 3px solid white;
-                box-shadow: 0 8px 20px 0 rgba(145, 145, 145, 0.6);
-                border-radius: 50%;
-                cursor: pointer;
-                width: 75px;
-                height: 75px;
-                margin-right: 15px;
-                transition: border-color 0.2s ease-in-out;
-
-                &:hover {
-                    border-color: #2196F3;
-                }
             }
         }
 
