--- a/client/src/assets/styles/material-overrides.scss
+++ b/client/src/assets/styles/material-overrides.scss
@@ -30,3 +30,9 @@ mat-nav-list {
     line-height: 27px !important;
   }
 }
+
+.mat-mini-fab {
+  .mat-button-wrapper {
+    line-height: 27px !important;
+  }
+}
