minor change to comments

--- a/client/src/app/general/post/post.component.scss
+++ b/client/src/app/general/post/post.component.scss
@@ -248,6 +248,12 @@
 	}
 }
 
+.has-comments {
+	fa-icon {
+		color: rgba(0, 0, 0, 1) !important;
+	}
+}
+
 .show-comments {
 	fa-icon {
 		color: rgba(0, 0, 0, 0.5) !important;
