--- a/client/src/app/general/post/post.component.html
+++ b/client/src/app/general/post/post.component.html
@@ -56,7 +56,7 @@
     <button *ngIf="!isLiked" mat-button class="btn btn-like" (click)="like()">
       <fa-icon [icon]="faThumbsUp"></fa-icon>
     </button>
-    <button mat-button class="btn btn-comment" [ngClass]="{ 'show-comments': showComments }"
+    <button mat-button class="btn btn-comment" [ngClass]="{ 'has-comments': allComments.length > 0 }"
       (click)="showComments = !showComments" [disabled]="!allComments.length > 0">
       <fa-icon [icon]="faComment"></fa-icon>
     </button>
