--- a/client/src/app/layouts/main/main.component.scss
+++ b/client/src/app/layouts/main/main.component.scss
@@ -38,7 +38,9 @@
 		}
 
 		.profile-image {
-			background-size: contain;
+			background-size: cover;
+			background-position: center center;
+			background-repeat: no-repeat;
 			box-shadow: 0 8px 20px 0 rgba(145, 145, 145, 0.6);
 			width: 40px;
 			height: 40px;
