--- a/client/src/app/pages/profile/profile.component.scss
+++ b/client/src/app/pages/profile/profile.component.scss
@@ -8,7 +8,9 @@
             margin-top: 25px;
 
             .image-container {
-                background-size: contain;
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-position: center center;
                 border: 3px solid white;
                 box-shadow: 0 8px 20px 0 rgba(145, 145, 145, 0.6);
                 border-radius: 50%;
