--- a/client/src/app/general/dialogs/cpi/cpi.component.scss
+++ b/client/src/app/general/dialogs/cpi/cpi.component.scss
@@ -1,5 +1,7 @@
 .image {
-  background-size: contain;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
   position: relative;
   margin-bottom: 25px;
   display: block;
