--- a/client/src/app/layouts/main/main.component.html
+++ b/client/src/app/layouts/main/main.component.html
@@ -32,6 +32,13 @@
                 <a routerLink="/share-resource" routerLinkActive="active-sidenav">
                     <fa-icon [icon]="faShareAlt"></fa-icon>&nbsp;&nbsp;Share Resource
                 </a>
+                <mat-divider></mat-divider>
+                <a routerLink="/manage/resource" routerLinkActive="active-sidenav">
+                    <fa-icon [icon]="faSquare"></fa-icon>&nbsp;&nbsp;Manage Resources
+                </a>
+                <a routerLink="/manage/collection" routerLinkActive="active-sidenav">
+                    <fa-icon [icon]="faBorderAll"></fa-icon>&nbsp;&nbsp;Manage Collections
+                </a>
             </mat-nav-list>
         </mat-sidenav>
 
