--- a/client/src/app/pages/manage/manage-collections/manage-collections.component.html
+++ b/client/src/app/pages/manage/manage-collections/manage-collections.component.html
@@ -18,7 +18,7 @@
       </div>
       <div class="list-of-collections">
         <app-collection *ngFor="let collection of collections" [data]="collection"
-          [routerLink]="['collection', collection._id]"></app-collection>
+          [routerLink]="[collectionUrl, collection._id]"></app-collection>
       </div>
     </div>
   </div>
