--- a/client/src/app/layouts/main/main.component.scss
+++ b/client/src/app/layouts/main/main.component.scss
@@ -16,7 +16,8 @@
 	}
 
 	.toolbar {
-		box-shadow: 0 8px 20px 0 rgba(218, 224, 235, 0.6);
+		background-color: white;
+		box-shadow: 0 2px 16px rgba(0, 0, 0, .1);
 		z-index: 100;
 
 		.app-name {
