--- a/src/app/pages/view-collection/view-collection.component.html
+++ b/src/app/pages/view-collection/view-collection.component.html
@@ -9,7 +9,7 @@
             <app-resource 
             *ngFor="let resource of resources" 
             [data]="resource" 
-            [isInCollectionPage]="true"
+            [whichPage]="2"
             (drResponse)="drResponseHandler($event)"
             [collectionId]="id"></app-resource>
         </div>
