updates to custom butotn style

--- a/src/app/components/custom-button/custom-button.component.html
+++ b/src/app/components/custom-button/custom-button.component.html
@@ -1,7 +1,8 @@
 <button 
 matRipple 
-class="custom-button" 
+class="custom-button"
+[ngClass]="isDisabled ? '' : 'not-disabled'" 
 [disabled]="isDisabled" 
-[ngStyle]="{'background-color': bgColor, 'padding': padding}">
+[ngStyle]="{'background-color': bgColor, 'padding': padding, 'font-size': fontSize}">
   {{ buttonLabel }}
 </button>
