--- a/src/app/pages/share-resource/share-resource.component.html
+++ b/src/app/pages/share-resource/share-resource.component.html
@@ -72,7 +72,7 @@
         </mat-form-field>
 
         <div class="form-button-container clearfix">
-          <button mat-raised-button color="primary" [disabled]="isDisabled">Share</button>
+          <app-custom-button buttonLabel="Share" [isDisabled]="isDisabled" size="small"></app-custom-button>
         </div>
       </form>
     </div>
